<resources>
    <string name="app_name">NFC Peerbits</string>
    <string name="repoUrl">https://github.com/pro100svitlo/Credit-Card-NFC-Reader#questions-and-help</string>
    <string name="tv_noNfc">There is no NFC module on this device</string>
    <string name="tv_tapYourCard">Please put your card to back panel of the phone</string>
    <string name="ad_progressBar_title">Scanning ...</string>
    <string name="ad_progressBar_mess">Please do not remove or move card during reading.</string>
    <string name="snack_unknown_bank_card">This is unknown bank card.</string>
    <string name="snack_doNotMoveCard">Please do not move card, try again !</string>
    <string name="snack_unknownEmv">Unknown EMV card</string>
    <string name="snack_lockedNfcCard">NFC is locked on this card.</string>
    <string name="ad_nfcTurnOn_title">NFC is turned off.</string>
    <string name="ad_nfcTurnOn_message">You need turn on NFC module for scanning. Wish turn on it now?</string>
    <string name="ad_nfcTurnOn_pos">Turn on</string>
    <string name="ad_nfcTurnOn_neg">Dismiss</string>
    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_read_tag">Read from NFC Tag</string>
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="hint_message">Message</string>
    <string name="str_payment_with_nfc">Payment With NFC</string>
    <string name="str_read_with_nfc">Read  with NFC</string>
    <string name="str_Write_with_nfc">Write with NFC</string>
    <string name="str_Scan_with_nfc">Scan with NFC</string>
    <string name="card_title">Sample Loyalty Card</string>
    <string name="account_number">Account Number</string>
    <string name="todo">TODO</string>
    <string name="str_nfc">NFC</string>
    <string name="str_nfc_homepage">Home Nfc</string>
    <string name="str_nfc_read_text">Tap your NFC tag on \n mobile to read</string>
    <string name="str_nfc_write_text">Tap your NFC tag on \n mobile to write</string>
    <string name="str_Credit_Card_text">Tap your Credit Card on \n mobile to read</string>
    <string name="str_reading">Reading</string>
    <string name="str_scanning">Scanning</string>
    <string name="str_expiry">Expiry</string>
    <string name="str_card_number">CARD NUMBER</string>
    <string name="str_paynow">PAYNOW</string>
    <string name="str_payment">Payment</string>
    <string name="str_02_18">02/18</string>
    <string name="str_xxxx_xxxx_xxxx_4444">XXXX - XXXX - XXXX - 4444</string>
    <string name="str_write_with_nfc">Write with NFC</string>
    <string name="str_tap_your_nfc_tag_on_mobile_to_read">Tap your NFC tag on mobile to read</string>
    <string name="tap_your_str_nfc_tag_on_mobile_to_read">Tap your NFC tag on mobile to read</string>
    <string name="str_read_with_nfc_t">Read with NFC</string>
    <string name="str_todo">TODO</string>
    <string name="str_read_with_nfc_card_t">Read with NFC Card</string>
    <string name="str_ttap_your_credit_card_on_mobile_to_read">Tap your Credit Card on mobile to read</string>

</resources>
