<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    >


    <RelativeLayout
        android:id="@+id/rlBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/_15sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/str_todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_read_with_nfc_t"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20sdp"/>

    </RelativeLayout>



    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlBack"
        android:text="@string/tap_your_str_nfc_tag_on_mobile_to_read"
        android:textColor="#ffffff"
        android:textSize="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="@dimen/_10sdp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imgRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvText"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/gif_read"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgRead"
       android:layout_centerInParent="true"
        android:orientation="horizontal"
      >

        <TextView
            android:id="@+id/tvNFCMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_25sdp"
            android:text="@string/str_reading"
            />

        <com.bhargavms.dotloader.DotLoader
            android:id="@+id/text_dot_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:color_array="@array/dot_colors"
            app:dot_radius="@dimen/_3sdp"
            android:layout_gravity="bottom"
            app:number_of_dots="4"/>
    </LinearLayout>

</RelativeLayout>
